adding new cv and media coverage

--- a/software.html
+++ b/software.html
@@ -42,6 +42,7 @@
       <div class="main col c10">
       <ul>
         <li><a href="http://bayesianlogic.cs.berkeley.edu">BLOG</a>: a probabilistic programming language for machine learning</li>
+        <li><a href="https://github.com/lileicc/swift">Swift</a>: a compiler for the probabilistic programming language BLOG.</li>
         <li><a href="software/dynammo-r346.zip">DynaMMo</a>: learning toolbox for multi-dimensional co-evolving time series. <a href="https://github.com/lileicc/dynammo">github page</a></li>
         <li><a href="software/clds-r347.zip">CLDS</a>: complex-valued linear dynamical system</li>
         <li><a href="software/plif-r345.zip">PLiF</a>: time-shift-invariant feature extraction for time series </li>
