--- a/leili-pubs.html
+++ b/leili-pubs.html
@@ -82,7 +82,7 @@
       <div class="group year" extra="ASC number"> <a href="#top" style="display: inline"><em>(Top
             of the page)</em></a>
         <div style="padding-bottom:10px;"></div>
-        <div class="sort journal" extra="DESC string">
+        <div class="sort journal" extra="ASC string">
           <div class="templates"></div>
         </div>
       </div>
