--- a/leili-pubs.html
+++ b/leili-pubs.html
@@ -79,10 +79,10 @@
       </div>
     </div>
     <div class="bibtex_structure">
-      <div class="group year" extra="ASC number"> <a href="#top" style="display: inline"><em>(Top
+      <div class="group year" extra="DESC number"> <a href="#top" style="display: inline"><em>(Top
             of the page)</em></a>
         <div style="padding-bottom:10px;"></div>
-        <div class="sort journal" extra="ASC string">
+        <div class="sort journal" extra="DESC string">
           <div class="templates"></div>
         </div>
       </div>
