--- a/leili-pubs.html
+++ b/leili-pubs.html
@@ -82,7 +82,7 @@
       <div class="group year" extra="DESC number"> <a href="#top" style="display: inline"><em>(Top
             of the page)</em></a>
         <div style="padding-bottom:10px;"></div>
-        <div class="sort journal" extra="DESC string">
+        <div class="sort month" extra="DESC date">
           <div class="templates"></div>
         </div>
       </div>
@@ -91,13 +91,15 @@
       <div class="if bibtex_template" style="display: none;">
         <ul>
           <li> 
+            <!---
             <span class="if journal !nolink"> 
               <a class="bibtexVar" href="pubs/+BIBTEXKEY+.pdf"
                 extra="BIBTEXKEY">
                 <span style="text-decoration: underline;" class="title"></span>,
               </a> 
             </span> 
-            <span class="if title nolink"> <span class="title"></span>,
+            --->
+            <span class="if title"> <span class="title"></span>,
             </span>
             <div class="if author"> <span class="author"></span> </div>
             <div> 
