--- a/leili-pubs.html
+++ b/leili-pubs.html
@@ -79,7 +79,8 @@
       </div>
     </div>
     <div class="bibtex_structure">
-      <div class="group year" extra="DESC number"> <a href="#top" style="display: inline"><em>(Top
+      <div class="group year" extra="DESC number"> 
+        <a href="#top" style="display: inline"><em>(Top
             of the page)</em></a>
         <div style="padding-bottom:10px;"></div>
         <div class="sort month" extra="DESC date">
@@ -101,7 +102,14 @@
             --->
             <span class="if title"> <span class="title"></span>,
             </span>
-            <div class="if author"> <span class="author"></span> </div>
+            <div class="if author"> 
+              <span class="author">
+              	<span class="first"> </span>
+                <span class="von"></span> 
+                <span class="last"></span>
+                <span class="junior"></span>
+              </span> 
+            </div>
             <div> 
               <span class="if journal">
                 <em>
