--- a/leili-pubs.html
+++ b/leili-pubs.html
@@ -103,12 +103,8 @@
             <span class="if title"> <span class="title"></span>,
             </span>
             <div class="if author"> 
-              <span class="author">
-              	<span class="first"> </span>
-                <span class="von"></span> 
-                <span class="last"></span>
-                <span class="junior"></span>
-              </span> 
+              <span class="author"><span class="first"></span><span class="von"></span><span class="last"></span><span class="junior"></span>
+              </span>
             </div>
             <div> 
               <span class="if journal">
