--- a/leili-pubs.html
+++ b/leili-pubs.html
@@ -103,9 +103,7 @@
             --->
             <span class="if title"> 
               <a class="bibtexVar" href="pubs/+BIBTEXKEY+.pdf"
-                extra="BIBTEXKEY">
-                <span style="text-decoration: underline;" class="title"></span>
-              </a>,
+                extra="BIBTEXKEY"><span style="text-decoration: underline;" class="title"></span></a>,
             </span>
             <div class="if author"> 
               <span class="author">
