--- a/leili-pubs.html
+++ b/leili-pubs.html
@@ -84,9 +84,10 @@
         <a href="#top" style="display: inline"><em>(Top
             of the page)</em></a>
         <div style="padding-bottom:10px;"></div>
-        <div class="sort month" extra="DESC date">
-          <div class="templates"></div>
-        </div>
+        <div class="templates"></div>
+        <!-- div class="sort month" extra="DESC date">
+          
+        </div -->
       </div>
     </div>
     <div id="bibtex_display">
