--- a/leili-pubs.html
+++ b/leili-pubs.html
@@ -151,6 +151,7 @@
               <span class="if month"><span class="month"></span>,</span> <span
                 class="if year"><span
                   class="year"></span>.</span>
+              <span class="if url"><a class="bibtexVar" href="+URL+" extra="url">[URL]</a></span>
               <span class="if note"><span class="note"></span>.</span> <a class="bibtexVar"
                 role="button"
                 data-toggle="collapse"
