--- a/leili-pubs.html
+++ b/leili-pubs.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta http-equiv="cache-control" content="no-cache">
     <title> Lei Li's publications </title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="jquery-3.4.1.min.js"></script>
     <script src="bibtex_js.js" type="text/javascript" charset="utf-8"></script>
   </head>
   <body><bibtex src="leili.bib"></bibtex>
@@ -180,6 +180,6 @@
       </div>
     </div>
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="bootstrap.min.js"></script>
   </body>
 </html>
