--- a/leili-pubs.html
+++ b/leili-pubs.html
@@ -107,7 +107,11 @@
                 extra="BIBTEXKEY"><span style="text-decoration: underline;" class="title"></span></a>,
             </span>
             <div class="if author"> 
-              <span class="author">
+              <span class="author" conjunction=", and">
+                <span class="First Last">
+                  <span class="first"></span>
+                  <span class="last"></span>
+                </span>
               </span>
             </div>
             <div> 
