--- a/leili-pubs.html
+++ b/leili-pubs.html
@@ -108,10 +108,8 @@
             </span>
             <div class="if author"> 
               <span class="author" conjunction=", and">
-                <span class="First Last">
-                  <span class="first"></span>
-                  <span class="last"></span>
-                </span>
+                  <span class="first">First</span>
+                  <span class="last">Last</span>
               </span>
             </div>
             <div> 
