--- a/leili-pubs.html
+++ b/leili-pubs.html
@@ -106,12 +106,7 @@
               <a class="bibtexVar" href="pubs/+BIBTEXKEY+.pdf"
                 extra="BIBTEXKEY"><span style="text-decoration: underline;" class="title"></span></a>,
             </span>
-            <div class="if author"> 
-              <span class="author" conjunction=", and">
-                  <span class="first">First</span>
-                  <span class="last">Last</span>
-              </span>
-            </div>
+            <div class="if author"><span class="author" conjunction=", and"><span class="first"></span> <span class="last"></span></span></div>
             <div> 
               <span class="if journal">
                 <em>
