--- a/leili-pubs.html
+++ b/leili-pubs.html
@@ -141,6 +141,9 @@
                 class="if year"><span
                   class="year"></span>.</span>
               <span class="if url"><a class="bibtexVar" href="+URL+" extra="url">[URL]</a></span>
+              <span class="if doi"><a class="bibtexVar" href="+DOI+" extra="doi">[DOI]</a></span>
+              <span class="if software"><a class="bibtexVar" href="+SOFTWARE+" extra="software">[Software]</a></span>
+              <span class="if slides"><a class="bibtexVar" href="+SLIDES+" extra="slides">[Slides]</a></span>
               <span class="if note"><span class="note"></span>.</span> 
               <a class="bibtexVar"
                 role="button"
@@ -163,7 +166,14 @@
             </div>
             <div class="bibtexVar collapse" id="bib+BIBTEXKEY+" extra="BIBTEXKEY">
               <div>
-                <pre><span class="bibtexraw noread"></span></pre>
+                <pre><!--span class="bibtexraw noread"></span-->
+@<span class="bibtextype"></span>{<span class="bibtexkey"></span>,
+  author = <span class="author"></span>,
+  title = <span class="title"></span>,
+<span class="if booktitle">  booktitle = <span class="booktitle"></span>,</span>
+  year = <span class="year"></span>,
+}
+                </pre>
               </div>
             </div>
             <div class="bibtexVar collapse" id="abs+BIBTEXKEY+" extra="BIBTEXKEY">
