--- a/leili-pubs.html
+++ b/leili-pubs.html
@@ -167,11 +167,11 @@
             <div class="bibtexVar collapse" id="bib+BIBTEXKEY+" extra="BIBTEXKEY">
               <div>
                 <pre><!--span class="bibtexraw noread"></span-->
-<pre class="bibtextypekey"></pre>{<pre class="bibtexkey"></pre>,
-  author = <pre class="author"></pre>,
-  title = <pre class="title"></pre>,
-<pre class="if booktitle">  booktitle = <pre class="booktitle"></pre>,</pre>
-  year = <pre class="year"></pre>,
+<span class="bibtextypekey"></span>{<span class="bibtexkey"></span>,
+  author = <span class="author"></span>,
+  title = <span class="title"></span>,
+<span class="if booktitle">  booktitle = <span class="booktitle"></span>,</span>
+  year = <span class="year"></span>,
 }
                 </pre>
               </div>
