--- a/leili-pubs.html
+++ b/leili-pubs.html
@@ -167,10 +167,10 @@
             <div class="bibtexVar collapse" id="bib+BIBTEXKEY+" extra="BIBTEXKEY">
               <div>
                 <pre><!--span class="bibtexraw noread"></span-->
-<span class="bibtextypekey"></span>{<span class="bibtexkey"></span>,
+<span class="bibtextypekey" object.style.textTransform="lowercase"></span>{<span class="bibtexkey"></span>,
   author = <span class="author"></span>,
-  title = <span class="title"></span>,
-<span class="if booktitle">  booktitle = <span class="booktitle"></span>,</span>
+  title = "<span class="title"></span>",
+<span class="if booktitle">  booktitle = "<span class="booktitle"></span>",</span>
   year = <span class="year"></span>,
 }
                 </pre>
