--- a/leili-pubs.html
+++ b/leili-pubs.html
@@ -166,14 +166,12 @@
             </div>
             <div class="bibtexVar collapse" id="bib+BIBTEXKEY+" extra="BIBTEXKEY">
               <div>
-                <pre><!--span class="bibtexraw noread"></span-->
-<span class="bibtextypekey" object.style.textTransform="lowercase"></span>{<span class="bibtexkey"></span>,
+                <pre><span class="bibtextypekey" object.style.textTransform="lowercase"></span>{<span class="bibtexkey"></span>,
   author = <span class="author"></span>,
   title = "<span class="title"></span>",
 <span class="if booktitle">  booktitle = "<span class="booktitle"></span>",</span>
   year = <span class="year"></span>,
-}
-                </pre>
+}</pre>
               </div>
             </div>
             <div class="bibtexVar collapse" id="abs+BIBTEXKEY+" extra="BIBTEXKEY">
