--- a/leili-pubs.html
+++ b/leili-pubs.html
@@ -143,8 +143,7 @@
               <span class="if url"><a class="bibtexVar" href="+URL+" extra="url">[URL]</a></span>
               <span class="if doi"><a class="bibtexVar" href="+DOI+" extra="doi">[DOI]</a></span>
               <span class="if software"><a class="bibtexVar" href="+SOFTWARE+" extra="software">[Software]</a></span>
-              <span class="if slides"><a class="bibtexVar" href="+SLIDES+" extra="slides">[Slides]</a></span>
-              <span class="if note"><span class="note"></span>.</span> 
+              <span class="if slides"><a class="bibtexVar" href="+SLIDES+" extra="slides">[Slides]</a></span> 
               <a class="bibtexVar"
                 role="button"
                 data-toggle="collapse"
@@ -163,6 +162,8 @@
                 extra="BIBTEXKEY">
                 [abstract] </a>
               </span>
+              <p class="note">
+              <span class="if note"><span class="note"></span>.</span></p>
             </div>
             <div class="bibtexVar collapse" id="bib+BIBTEXKEY+" extra="BIBTEXKEY">
               <div>
