--- a/leili-pubs.html
+++ b/leili-pubs.html
@@ -169,16 +169,16 @@
               <div>
                 <pre><span class="bibtextypekey" style="texttransform:lowercase"></span>{<span class="bibtexkey"></span>,
   author = <span class="author"></span>,
-  title = "<span class="title"></span>",
-<span class="if booktitle">  booktitle = "<span class="booktitle"></span>",</span>
-<span class="if journal">  journal = "<span class="journal"></span>",</span>
-<span class="if publisher">  publisher = "<span class="publisher"></span>",</span>
-<span class="if school">  school = "<span class="school"></span>",</span>
-  year = <span class="year"></span>,
-<span class="if volume">  volume = "<span class="volume"></span>",</span>
-<span class="if number">  number = "<span class="number"></span>",</span>
-<span class="if pages">  pages = "<span class="pages"></span>",</span>
-<span class="if edition">  edition = "<span class="edition"></span>",</span>
+  title = "<span class="title"></span>",<span class="if booktitle">
+  booktitle = "<span class="booktitle"></span>",</span><span class="if journal">
+  journal = "<span class="journal"></span>",</span><span class="if publisher">
+  publisher = "<span class="publisher"></span>",</span><span class="if school">
+  school = "<span class="school"></span>",</span>
+  year = <span class="year"></span>,<span class="if volume">
+  volume = "<span class="volume"></span>",</span><span class="if number">
+  number = "<span class="number"></span>",</span><span class="if pages">
+  pages = "<span class="pages"></span>",</span><span class="if edition">
+  edition = "<span class="edition"></span>",</span>
 }</pre>
               </div>
             </div>
