--- a/leili-pubs.html
+++ b/leili-pubs.html
@@ -167,7 +167,7 @@
             </div>
             <div class="bibtexVar collapse" id="bib+BIBTEXKEY+" extra="BIBTEXKEY">
               <div>
-                <pre><span class="bibtextypekey" style="texttransform:lowercase"></span>{<span class="bibtexkey"></span>,
+                <pre><span class="bibtextypekey" style="text-transform:lowercase"></span>{<span class="bibtexkey"></span>,
   author = <span class="author"></span>,
   title = "<span class="title"></span>",<span class="if booktitle">
   booktitle = "<span class="booktitle"></span>",</span><span class="if journal">
