--- a/leili-pubs.html
+++ b/leili-pubs.html
@@ -38,9 +38,21 @@
 	    #bibtex_errors { margin-top:10px; color: red;}
 	    h1.header {margin-left:8px;}
 	    h1.YEAR { font-size: 17px; font-weight: bold; display: inline; margin-left:8px;}
+      span.raw pre {
+        font-size: small;
+      }
+      .NOTE {
+        color: green;
+        font-size: small;
+        text-indent:2em;
+        margin-top:1px; margin-bottom:-3px;
+      }
+      pre {
+        overflow: auto;
+      }
     </style>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <a name="top"></a>
     <h1 class="header">Lei Li's Publications</h1>
     <div class="container-fluid">
@@ -168,8 +180,8 @@
             <div class="bibtexVar collapse" id="bib+BIBTEXKEY+" extra="BIBTEXKEY">
               <div>
                 <pre><span class="bibtextypekey" style="text-transform:lowercase"></span>{<span class="bibtexkey"></span>,
-  author = <span class="author"></span>,
-  title = "<span class="title"></span>",<span class="if booktitle">
+  author = <span class="author raw"></span>,
+  title = "<span class="title raw"></span>",<span class="if booktitle">
   booktitle = "<span class="booktitle"></span>",</span><span class="if journal">
   journal = "<span class="journal"></span>",</span><span class="if publisher">
   publisher = "<span class="publisher"></span>",</span><span class="if school">
