--- a/leili-pubs.html
+++ b/leili-pubs.html
@@ -41,7 +41,7 @@
       pre {
         overflow: auto;
       }
-      .raw {
+      span.raw {
         display: block;
         unicode-bidi: embed;
         font-family: monospace;
