--- a/leili-pubs.html
+++ b/leili-pubs.html
@@ -173,18 +173,18 @@
             </div>
             <div class="bibtexVar collapse" id="bib+BIBTEXKEY+" extra="BIBTEXKEY">
               <div>
-                <pre><span class="bibtextypekey raw" style="text-transform:lowercase"></span>{<span class="bibtexkey"></span>,
-  author = <span class="author raw"></span>,
-  title = "<span class="title raw"></span>",<span class="if booktitle">
-  booktitle = "<span class="booktitle raw"></span>",</span><span class="if journal">
-  journal = "<span class="journal raw"></span>",</span><span class="if publisher">
-  publisher = "<span class="publisher raw"></span>",</span><span class="if school">
-  school = "<span class="school raw"></span>",</span>
-  year = <span class="year raw"></span>,<span class="if volume">
-  volume = "<span class="volume raw"></span>",</span><span class="if number">
-  number = "<span class="number raw"></span>",</span><span class="if pages">
-  pages = "<span class="pages raw"></span>",</span><span class="if edition">
-  edition = "<span class="edition raw"></span>",</span>
+                <pre><span class="bibtextypekey" style="text-transform:lowercase"></span>{<span class="bibtexkey"></span>,
+  author = <span class="author"></span>,
+  title = "<span class="title"></span>",<span class="if booktitle">
+  booktitle = "<span class="booktitle"></span>",</span><span class="if journal">
+  journal = "<span class="journal"></span>",</span><span class="if publisher">
+  publisher = "<span class="publisher"></span>",</span><span class="if school">
+  school = "<span class="school"></span>",</span>
+  year = <span class="year"></span>,<span class="if volume">
+  volume = "<span class="volume"></span>",</span><span class="if number">
+  number = "<span class="number"></span>",</span><span class="if pages">
+  pages = "<span class="pages"></span>",</span><span class="if edition">
+  edition = "<span class="edition"></span>",</span>
 }</pre>
               </div>
             </div>
