--- a/leili-pubs.html
+++ b/leili-pubs.html
@@ -46,7 +46,7 @@
       }
     </style>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <a name="top"></a>
     <h1 class="header">Lei Li's Publications</h1>
     <div class="container-fluid">
