using first last name

--- a/leili-pubs.html
+++ b/leili-pubs.html
@@ -96,7 +96,6 @@
             of the two terms)</span> </div>
       </div>
     </div>
-    <br>
     <div class="bibtex_structure">
       <div class="group year" extra="DESC number"> 
         <a href="#top" style="display: inline"><em>(Top
@@ -116,7 +115,10 @@
               <a class="bibtexVar" href="pubs/+BIBTEXKEY+.pdf"
                 extra="BIBTEXKEY"><span style="text-decoration: underline;" class="title"></span></a>,
             </span>
-            <div class="if author"><span class="author" conjunction=", and"></span></div>
+            <div class="if author"><span class="author" conjunction=", and">
+              <span class="first"></span> 
+              <span class="last"> </span>
+            </span></div>
             <div> 
               <span class="if journal">
                 <em>
