--- a/pubs.html
+++ b/pubs.html
@@ -40,6 +40,7 @@
 	    h1.YEAR { font-size: 17px; font-weight: bold; display: inline; margin-left:8px;}
       pre {
         white-space: pre-wrap;
+        hyphens: auto;
       }
       .note {
         color: green;
