adding papers and updating home page

--- a/index.html
+++ b/index.html
@@ -54,30 +54,16 @@
       <div class="main col c10">
         <p>
 My interest is to advance machine intelligence to better assist human
-in information creation and comprehension. To this end, I develop
+in information creation, comprehension, and sharing. To this end, I develop
 machine learning and statistical technologies that learn from data and
-past experience. <br />
-        </p>
-        <h3>Foundational Learning Paradigm and Algorithms</h3>
-        <ul>
-          <li>Probabilsitic programming language and compilers</li>
-          <li>Large scale optimization methods</li>
-        </ul>
-        <h3>NLP</h3>
-        <ul>
-          <li>Natural language generation</li>
-          <li>Machine translation</li>
-          <li>Automatic question answering</li>
-          <li>Shallow parsing</li>
-        </ul>
-        <h3>Data Mining</h3>
-        <ul>
-          <li>Mining co-evolving time series</li>
-          <li>Text mining</li>
-        </ul>
-        <br />
+past experience. In particular, I work on natural language processing, machine translation, probabilistic inference, optimization algorithms, and data mining.   <br />
+  <h3>News</h3>
+<ul> 1 paper accepted at NeurIPS 2019. see you in Vancouver.</ul>
+<ul> 1 paper accepted at INLG 2019. It is about the style transfer for text generation. </ul>
+<ul> 1 paper accepted at EMNLP 2019, about Linear time machine translation. </ul>
+<ul> 2 papers accepted at ICCV 2019. One is to be presented as an Oral talk. </ul>
+<ul> Dr. Hao Zhou and I are going to give a tutorial on deep generative models for text generation at NLPCC-ADL 2019 at Dunhuang, China. </ul>     
         <h3>Media Coverage</h3>
-        
 <h4>Coverage about Xiaomingbot: </h4>
 <ul>
           
