--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@ in information creation, comprehension, and sharing. To this end, I develop
 machine learning and statistical technologies that learn from data and
 past experience. In particular, I work on natural language processing, machine translation, probabilistic inference, optimization algorithms, and data mining.   <br />
   <h3>News</h3>
-<ul> 1 paper accepted at NeurIPS 2019. see you in Vancouver.</ul>
-<ul> 1 paper accepted at INLG 2019. It is about the style transfer for text generation. </ul>
-<ul> 1 paper accepted at EMNLP 2019, about Linear time machine translation. </ul>
-<ul> 2 papers accepted at ICCV 2019. One is to be presented as an Oral talk. </ul>
-<ul> Dr. Hao Zhou and I are going to give a tutorial on deep generative models for text generation at NLPCC-ADL 2019 at Dunhuang, China. </ul>     
+<ul><img src="images/new-icon.gif" style="height:1.2em"> 1 paper accepted at NeurIPS 2019. see you in Vancouver.</ul>
+<ul><img src="images/new-icon.gif" style="height:1.2em"> 1 paper accepted at INLG 2019. It is about the style transfer for text generation. </ul>
+<ul><img src="images/new-icon.gif" style="height:1.2em"> 1 paper accepted at EMNLP 2019, about Linear time machine translation. </ul>
+<ul><img src="images/new-icon.gif" style="height:1.2em"> 2 papers accepted at ICCV 2019. One is to be presented as an Oral talk. </ul>
+<ul><img src="images/new-icon.gif" style="height:1.2em"> Dr. Hao Zhou and I are going to give a tutorial on deep generative models for text generation at NLPCC-ADL 2019 at Dunhuang, China. </ul>     
         <h3>Media Coverage</h3>
 <h4>Coverage about Xiaomingbot: </h4>
 <ul>
