--- a/pubs.html
+++ b/pubs.html
@@ -159,6 +159,12 @@
               <span class="if BIBTEXTYPEKEY==@TECHREPORT">
                 Technical report 
                 <span class="number"></span>,</span>
+              <span class="if BIBTEXTYPEKEY==@PHDTHESIS">
+                Ph.D. Dissertation, </span>
+              <span class="if school">
+               <span class="school"></span>, </span>
+              <span class="if howpublished">
+               <span class="howpublished"></span>, </span>
               <span class="if institution">
                 <span class="institution"></span>,
               </span>
