adding emnlp2019 tutorial

--- a/research.html
+++ b/research.html
@@ -94,6 +94,12 @@
 
           <h1>Talks and Tutorial</h1>
           <ul>
+            <li>
+              <a href="https://lili-mou.github.io/emnlp2019-dnlp.html">EMNLP 2019 Tutorial on Discreteness in NLP</a>. 
+            </li>
+            <li>
+              <a href="https://xxx">CCF-ADL107/NLPCC 2019 Tutorial on Deep Generative Models for Text Generation</a>. 
+            </li>
             <li>BLOG language and compiled inference. Computer Science department, Stanford University, Tsinghua University, 2015.<br />
 </li>
   <li>2015 Invited Keynote at China Computer Federation Young Computer Scientists and Engineers Forum: Deep Learning – Towards More Intelligent Machines.<br />
