update cv and AAAI 2020

--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
           </p>
           <h3>News</h3>
           <ul>
+            <img src="images/new-icon.gif" style="height:1.2em" /> 4 paper
+            accepted at AAAI 2020, about pretraining method for neural machine translation, text editing, and approximate second order optimization</a>.
+          </ul>
+          <ul>
             <img src="images/new-icon.gif" style="height:1.2em" /> 1 paper
-            accepted at NeurIPS 2019, about <a href="pubs/miao2019kernelized.pdf">contextualized embedding for text generation and how we use kernels to model embedding variance</a>. see you in Vancouver.
+            accepted at NeurIPS 2019, about <a href="pubs/miao2019kernelized.pdf">contextualized embedding for text generation and how we use kernels to model distribution and variance of word embeddings</a>. see you in Vancouver.
           </ul>
           <ul>
             <img src="images/new-icon.gif" style="height:1.2em" /> <a href="https://lili-mou.github.io/emnlp2019-dnlp.html">EMNLP 2019 Tutorial on Discreteness in NLP</a>
