change 'group year' to 'sort year'

--- a/pubs.html
+++ b/pubs.html
@@ -117,14 +117,16 @@
       </div>
     </div>
     <div class="bibtex_structure">
-      <div class="group year" extra="DESC number"> 
-        <a href="#top" style="display: inline"><em>(Top
-            of the page)</em></a>
-        <div style="padding-bottom:10px;"></div>
-        <div class="templates"></div>
-        <!-- div class="sort month" extra="DESC date">
-          
-        </div -->
+      <div class="section @article|@inproceedings|@misc|@phdthesis|@mastersthesis|@bachelorsthesis|@techreport|@book">
+        <div class="sort year" extra="DESC number"> 
+          <a href="#top" style="display: inline"><em>(Top
+              of the page)</em></a>
+          <div style="padding-bottom:10px;"></div>
+          <div class="templates"></div>
+          <!-- div class="sort month" extra="DESC date">
+            
+          </div -->
+        </div>
       </div>
     </div>
     <div id="bibtex_display">
