add missing div

--- a/pubs.html
+++ b/pubs.html
@@ -117,15 +117,17 @@
       </div>
     </div>
     <div class="bibtex_structure">
-      <div class="section @article|@inproceedings|@misc|@phdthesis|@mastersthesis|@bachelorsthesis|@techreport|@book|@manual">
-        <div class="group year" extra="DESC number"> 
-          <a href="#top" style="display: inline"><em>(Top
-              of the page)</em></a>
-          <div style="padding-bottom:10px;"></div>
-          <div class="templates"></div>
-          <!-- div class="sort month" extra="DESC date">
-            
-          </div -->
+      <div class="sections bibtextypekey">
+        <div class="section @article|@inproceedings|@misc|@phdthesis|@mastersthesis|@bachelorsthesis|@techreport|@book">
+          <div class="group year" extra="DESC number"> 
+            <a href="#top" style="display: inline"><em>(Top
+                of the page)</em></a>
+            <div style="padding-bottom:10px;"></div>
+            <div class="templates"></div>
+            <!-- div class="sort month" extra="DESC date">
+              
+            </div -->
+          </div>
         </div>
       </div>
     </div>
