--- a/pubs.html
+++ b/pubs.html
@@ -118,15 +118,28 @@
     </div>
     <div class="bibtex_structure">
       <div class="sections bibtextypekey">
-        <div class="section @article|@inproceedings|@misc|@phdthesis|@mastersthesis|@bachelorsthesis|@techreport|@book">
-          <div class="group year" extra="DESC number"> 
-            <a href="#top" style="display: inline"><em>(Top
-                of the page)</em></a>
-            <div style="padding-bottom:10px;"></div>
+        <div class="section @article">
+          <h1>Refereed Articles</h1>
+          <div class="sort year" extra="ASC number">
             <div class="templates"></div>
-            <!-- div class="sort month" extra="DESC date">
-              
-            </div -->
+          </div>
+        </div>
+        <div class="section @book">
+          <h1>Books</h1>
+          <div class="sort year" extra="ASC number">
+            <div class="templates"></div>
+          </div>
+        </div>
+        <div class="section @inproceedings">
+          <h1>Conference and Workshop Papers</h1>
+          <div class="sort year" extra="ASC number">
+            <div class="templates"></div>
+          </div>
+        </div>
+        <div class="section @misc|@phdthesis|@mastersthesis|@bachelorsthesis|@techreport">
+          <h1>Other Publications</h1>
+          <div class="sort year" extra="ASC number">
+            <div class="templates"></div>
           </div>
         </div>
       </div>
