--- a/pubs.html
+++ b/pubs.html
@@ -118,7 +118,7 @@
     </div>
     <div class="bibtex_structure">
       <div class="sections bibtextypekey">
-        <div class="section @misc|@phdthesis|@mastersthesis|@bachelorsthesis|@techreport">
+        <div class="section @article|@inproceedings|@misc|@phdthesis|@mastersthesis|@bachelorsthesis|@techreport|@book">
           <h1>Other Publications</h1>
           <div class="sort year" extra="ASC number">
             <div class="templates"></div>
