group by year, descend

--- a/pubs.html
+++ b/pubs.html
@@ -119,7 +119,7 @@
     <div class="bibtex_structure">
       <div class="sections bibtextypekey">
         <div class="section @article|@inproceedings|@misc|@phdthesis|@mastersthesis|@bachelorsthesis|@techreport|@book">
-          <div class="sort year" extra="ASC number">
+          <div class="group year" extra="DESC number">
             <div class="templates"></div>
           </div>
         </div>
