--- a/pubs.html
+++ b/pubs.html
@@ -120,7 +120,13 @@
       <div class="sections bibtextypekey">
         <div class="section @article|@inproceedings|@misc|@phdthesis|@mastersthesis|@bachelorsthesis|@techreport|@book">
           <div class="sort year" extra="DESC number">
-            <div class="templates"></div>
+              <a href="#top" style="display: inline"><em>(Top
+                  of the page)</em></a>
+              <div style="padding-bottom:10px;"></div>
+              <div class="templates"></div>
+              <!-- div class="sort month" extra="DESC date">
+                
+              </div -->
           </div>
         </div>
       </div>
