get back to group; sort ddoesn't work together with sections

--- a/pubs.html
+++ b/pubs.html
@@ -119,7 +119,7 @@
     <div class="bibtex_structure">
       <div class="sections bibtextypekey">
         <div class="section @article|@inproceedings|@misc|@phdthesis|@mastersthesis|@bachelorsthesis|@techreport|@book">
-          <div class="group year" extra="DESC number">
+          <div class="sort year" extra="DESC number">
               <a href="#top" style="display: inline"><em>(Top
                   of the page)</em></a>
               <div style="padding-bottom:10px;"></div>
