--- a/pubs.html
+++ b/pubs.html
@@ -121,7 +121,9 @@
           <a href="#top" style="display: inline"><em>(Top
               of the page)</em></a>
           <div style="padding-bottom:10px;"></div>
-          <div class="templates"></div>
+          <div class="templates">
+            <span class="year"></span> 
+          </div>
           <!-- div class="sort month" extra="DESC date">
             
           </div -->
