move if to <li>

--- a/pubs.html
+++ b/pubs.html
@@ -131,8 +131,7 @@
     <div id="bibtex_display">
       <div class="if bibtex_template" style="display: none;">
         <ul>
-          <li> 
-            <div class="if BIBTEXTYPEKEY==@article|@inproceedings|@misc|@phdthesis|@mastersthesis|@bachelorsthesis|@techreport|@book">
+          <li class="if BIBTEXTYPEKEY==@ARTICLE|@INPROCEEDINGS|@MISC|@PHDTHESIS|@MASTERTHESIS|@BACHELORSTHESIS|@TECHREPORT|@BOOK">  
             <span class="if title"> 
               <a class="bibtexVar" href="pubs/+BIBTEXKEY+.pdf"
                 extra="BIBTEXKEY"><span style="text-decoration: underline;" class="title"></span></a>,
@@ -239,7 +238,6 @@
               <span class="if topic">
                 <span class="topic"></span>
               </span>
-            </div>
             </div>
           </li>
         </ul>
