--- a/pubs.html
+++ b/pubs.html
@@ -131,7 +131,7 @@
     <div id="bibtex_display">
       <div class="if bibtex_template" style="display: none;">
         <ul>
-          <li class="if BIBTEXTYPEKEY!=@ARTICLE|@INPROCEEDINGS|@MISC|@PHDTHESIS|@MASTERTHESIS|@BACHELORSTHESIS|@TECHREPORT|@BOOK">  
+          <li class="if BIBTEXTYPEKEY!=@UNPUBLISHED">  
             <span class="if title"> 
               <a class="bibtexVar" href="pubs/+BIBTEXKEY+.pdf"
                 extra="BIBTEXKEY"><span style="text-decoration: underline;" class="title"></span></a>,
