fix bugs with or in if

--- a/pubs.html
+++ b/pubs.html
@@ -131,7 +131,7 @@
     <div id="bibtex_display">
       <div class="if bibtex_template" style="display: none;">
         <ul>
-          <li class="if BIBTEXTYPEKEY!=@UNPUBLISHED">  
+          <li class="if BIBTEXTYPEKEY==@ARTICLE || BIBTEXTYPEKEY==@INPROCEEDINGS|| BIBTEXTYPEKEY==@MISC|| BIBTEXTYPEKEY==@PHDTHESIS|| BIBTEXTYPEKEY==@MASTERTHESIS|| BIBTEXTYPEKEY==@BACHELORSTHESIS|| BIBTEXTYPEKEY==@TECHREPORT|| BIBTEXTYPEKEY==@BOOK">  
             <span class="if title"> 
               <a class="bibtexVar" href="pubs/+BIBTEXKEY+.pdf"
                 extra="BIBTEXKEY"><span style="text-decoration: underline;" class="title"></span></a>,
