--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
           </p>
           <h3>News</h3>
           <ul>
-            <img src="images/new-icon.gif" style="height:1.2em" /> 4 paper
+            <img src="images/new-icon.gif" style="height:1.2em" /> 2 papers
+            accepted at ICLR 2020, about mirror generative model to unite language modelling and machine translation, and learning data-to-text generation templates via a variational method even without parallel corpus</a>.
+          </ul>
+          <ul>
+            <img src="images/new-icon.gif" style="height:1.2em" /> 4 papers
             accepted at AAAI 2020, about pretraining method for neural machine translation, text editing, and approximate second order optimization</a>.
           </ul>
           <ul>
